--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="btn_wrapper">
                     <button class="add_btn">
-                        Добавления человека в очередь
+                        Добавление человека в очередь
                     </button>
                     <form action="" class="get_data" method="POST">
                         <button class="get_btn">
